noinst_LTLIBRARIES = libcollision.la
libcollision_la_SOURCES = \
 EventParticle.cxx EventParticle.h\
 EventNucleus.h\
 InterList.h DecayList.h DecayList.cxx WallList.h WallList.cxx\
 InterType.h\
 TwoBodyInterList.h TwoBodyInterList.cxx\
 CascBox.h CascBox.cxx CascCell.h CascCell.cxx\
 Collision.h Collision.cxx TimeOrder.h\
 Collision1.h Collision1.cxx\
 Collision3.h Collision3.cxx\
 CascParton.h CascString.cxx CascString.h\
 GGCF.h GGCF.cxx

subincludedir = $(includedir)/jam2/collision
subinclude_HEADERS = \
 EventParticle.h \
 EventNucleus.h\
 InterList.h DecayList.h WallList.h \
 InterType.h \
 TwoBodyInterList.h \
 CascBox.h  CascCell.h \
 Collision.h TimeOrder.h \
 Collision1.h \
 Collision3.h \
 CascParton.h CascString.h\
 GGCF.h

#INCLUDES = -I..
# EventBase.cxx EventBase.h
