noinst_LTLIBRARIES = libfluid.la
libfluid_la_SOURCES = \
 EoS.h EoS.cxx\
 RSolverHLLE.h RSolverHLLE.cxx\
 FluidElement.h FluidElement.cxx\
 Fluid.h Fluid.cxx\
 cornelius.h cornelius.cpp\
 Fluid2Particle.h Fluid2Particle.cxx\
 Particle2Fluid.h Particle2Fluid.cxx\
 FreezeOut.h FreezeOut.cxx\
 FluidHandler.h FluidHandler.cxx

subincludedir = $(includedir)/jam2/fluid
subinclude_HEADERS = \
 EoS.h \
 RSolverHLLE.h \
 FluidElement.h \
 Fluid.h \
 cornelius.h \
 Fluid2Particle.h \
 Particle2Fluid.h \
 FreezeOut.h \
 FluidHandler.h

EXTRA_DIST = eosB235JAMsoft.dat eosB235JAMsoft1mev.dat
