noinst_LTLIBRARIES = libhadrons.la
libhadrons_la_SOURCES = \
 JamStdlib.h GaussPoints.h \
 ParticleTable.cxx ParticleTable.h \
 JamParticleData.cxx JamParticleData.h \
 BaryonTable.h Mesons.cxx Mesons.h Baryons.cxx Baryons.h \
 DecayWidth.h DecayWidth.cxx DecayWidthTable.h

subincludedir = $(includedir)/jam2/hadrons
subinclude_HEADERS = \
 JamStdlib.h GaussPoints.h \
 ParticleTable.h \
 JamParticleData.h \
 BaryonTable.h Mesons.h Baryons.h \
 DecayWidth.h DecayWidthTable.h
