noinst_LTLIBRARIES = libinitcond.la
libinitcond_la_SOURCES =\
 InitialCondition.cxx InitialCondition.h\
 Nucleus.cxx Nucleus.h\
 BoostedTwoNuclei.cxx BoostedTwoNuclei.h\
 Angantyr.cxx Angantyr.h

subincludedir = $(includedir)/jam2/initcond
subinclude_HEADERS = \
 InitialCondition.h \
 Nucleus.h \
 BoostedTwoNuclei.h \
 Angantyr.h
