#SUBDIRS = pqcd
noinst_LTLIBRARIES = libinteraction.la
libinteraction_la_SOURCES = \
 PDFHadron.cxx PDFHadron.h\
 JPythia.cxx JPythia.h\
 HadronDecay.cxx HadronDecay.h\
 JParticleDecays.cxx JParticleDecays.h\
 BeamHadron.cxx BeamHadron.h\
 Scatter.cxx Scatter.h\
 ScatterKin.cxx ScatterKin.h\
 Scatter2.cxx Scatter2.h\
 SoftStrings.cxx SoftStrings.h\
 NuclearCluster.cxx NuclearCluster.h

subincludedir = $(includedir)/jam2/interaction
subinclude_HEADERS = \
 PDFHadron.h \
 JPythia.h \
 HadronDecay.h \
 JParticleDecays.h \
 BeamHadron.h \
 Scatter.h \
 ScatterKin.h \
 Scatter2.h \
 SoftStrings.h\
 NuclearCluster.h
