noinst_LTLIBRARIES = libmeanfield.la
libmeanfield_la_SOURCES = \
 MCell.h MCell.cxx MBox.h\
 TwoBodyDistance.h TwoBodyDistance.cxx\
 PotentialType.h PotentialType.cxx\
 ScalarPotential.h ScalarPotential.cxx\
 VectorPotential.h VectorPotential.cxx\
 ScalarVectorPotential.h ScalarVectorPotential.cxx\
 NonRelPotential.h NonRelPotential.cxx\
 MeanField.h MeanField.cxx QMD.h QMD.cxx GBUU.h GBUU.cxx\
 RQMDs.h RQMDs.cxx RQMDs0.h RQMDs0.cxx RQMDv.h RQMDv.cxx\
 RQMDsv.h RQMDsv.cxx RQMDw.h RQMDw.cxx\
 MBoxN.h MBoxN.cxx QMDBox.h   QMDBox.cxx\
 MBoxS.h MBoxS.cxx RQMDsBox.h RQMDsBox.cxx\
 MBoxV.h MBoxV.cxx RQMDvBox.h RQMDvBox.cxx\
 MBoxSV.h MBoxSV.cxx RQMDsvBox.h RQMDsvBox.cxx

subincludedir = $(includedir)/jam2/meanfield
subinclude_HEADERS = \
 MCell.h MBox.h\
 TwoBodyDistance.h \
 PotentialType.h \
 NonRelPotential.h\
 ScalarPotential.h\
 VectorPotential.h\
 ScalarVectorPotential.h\
 MeanField.h QMD.h GBUU.h \
 RQMDs.h RQMDs0.h RQMDv.h \
 RQMDsv.h RQMDw.h \
 MBoxN.h QMDBox.h \
 MBoxS.h RQMDsBox.h \
 MBoxV.h RQMDvBox.h \
 MBoxSV.h RQMDsvBox.h
