noinst_LTLIBRARIES = libxsection.la
libxsection_la_SOURCES = \
 CollisionPair.cxx CollisionPair.h\
 XsecTable.cxx XsecTable.h\
 SigmaNDelta.cxx SigmaNDelta.h\
 SigmaRR.cxx SigmaRR.h\
 CrossSection.cxx CrossSection.h\
 SigmaBB.cxx SigmaBB.h SigmaMB.cxx SigmaMB.h SigmaKB.cxx SigmaKB.h\
 SigmaBB1.cxx SigmaBB1.h SigmaBB2.cxx SigmaBB2.h\
 SigmaMM.cxx SigmaMM.h\
 SigmaABB.cxx SigmaABB.h\
 SampleMass.cxx SampleMass.h\
 HadronContent.cxx HadronContent.h

subincludedir = $(includedir)/jam2/xsection
subinclude_HEADERS = \
 CollisionPair.h \
 XsecTable.h \
 SigmaNDelta.h \
 SigmaRR.h \
 CrossSection.h \
 SigmaBB.h SigmaMB.h SigmaKB.h \
 SigmaBB1.h SigmaBB2.h \
 SigmaMM.h \
 SigmaABB.h \
 SampleMass.h \
 HadronContent.h
